<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="eventItem"
            type="com.example.presentation.model.EventItem" />
        <variable
            name="checkInListener"
            type="android.view.View.OnClickListener" />
        <variable
            name="shareListener"
            type="android.view.View.OnClickListener" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.DetailEventActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/iv_detail_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/cd_image_event"
                loadImage="@{eventItem.image}"
                app:layout_constraintBottom_toTopOf="@id/txt_detail_event_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_detail_event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="20sp"
                android:text="@{eventItem.title}"
                app:layout_constraintBottom_toTopOf="@id/txt_detail_event_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_detail_event" />

            <TextView
                android:id="@+id/txt_detail_event_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:text="@{eventItem.description}"
                app:layout_constraintBottom_toTopOf="@id/txt_detail_event_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_detail_event_name" />

            <TextView
                android:id="@+id/txt_detail_event_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:text="@{eventItem.date}"
                app:layout_constraintBottom_toTopOf="@id/txt_detail_event_latitude"
                app:layout_constraintEnd_toStartOf="@id/txt_detail_event_price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_detail_event_description" />

            <TextView
                android:id="@+id/txt_detail_event_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@{eventItem.price}"
                app:layout_constraintBottom_toBottomOf="@id/txt_detail_event_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/txt_detail_event_date"
                app:layout_constraintTop_toTopOf="@id/txt_detail_event_date" />

            <TextView
                android:id="@+id/txt_detail_event_latitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:text="@{eventItem.latitude}"
                app:layout_constraintBottom_toTopOf="@id/btn_check_in"
                app:layout_constraintEnd_toStartOf="@id/txt_detail_event_longitude"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_detail_event_date" />

            <TextView
                android:id="@+id/txt_detail_event_longitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@{eventItem.longitude}"
                app:layout_constraintBottom_toBottomOf="@id/txt_detail_event_latitude"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/txt_detail_event_latitude"
                app:layout_constraintTop_toTopOf="@id/txt_detail_event_latitude" />

            <Button
                android:id="@+id/btn_check_in"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/btn_check_in"
                android:textColor="@android:color/white"
                android:onClick="@{checkInListener}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_share"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_detail_event_latitude" />

            <Button
                android:id="@+id/btn_share"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/btn_share"
                android:textColor="@android:color/white"
                android:onClick="@{shareListener}"
                app:layout_constraintBottom_toBottomOf="@id/btn_check_in"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_check_in"
                app:layout_constraintTop_toTopOf="@id/btn_check_in" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>